Pre wrap fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -47,6 +47,9 @@
 // #Page Settings
 // -----------------------------
 
+pre {
+white-space: normal;
+}
 
 // Wrapper
 
